testdata/baselines/reference/submodule/compiler/indexSignaturesInferentialTyping.errors.txt
indexSignaturesInferentialTyping.ts(1,53): error TS2322: Type 'undefined' is not assignable to type 'T'.
indexSignaturesInferentialTyping.ts(2,53): error TS2322: Type 'undefined' is not assignable to type 'T'.


==== indexSignaturesInferentialTyping.ts (2 errors) ====
    function foo<T>(items: { [index: number]: T }): T { return undefined; }
                                                        ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'T'.
    function bar<T>(items: { [index: string]: T }): T { return undefined; }
                                                        ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'T'.
    
    var x1 = foo({ 0: 0, 1: 1 });       // type should be number
    var x2 = bar({ 0: 0, 1: 1 });
    var x3 = bar({ zero: 0, one: 1 });  // type should be number
    